// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coren-middleware test res function sendCoren index 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">
    window.__PRELOADED_STATE__ = {\\"auth\\":false}
  </script>
  <meta name=\\"description\\" content=\\"home description\\">
</head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">index file!</button>
  </div>



</body></html>"
`;

exports[`coren-middleware test res function sendCoren index/users 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">
    window.__PRELOADED_STATE__ = {\\"auth\\":false}
  </script>
  <meta name=\\"description\\" content=\\"home description\\">
</head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">users file!</button>
  </div>



</body></html>"
`;

exports[`coren-middleware test res function sendCoren index/users/1 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">
    window.__PRELOADED_STATE__ = {\\"auth\\":false}
  </script>
  <meta name=\\"description\\" content=\\"home description\\">
</head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">users file! #1</button>
  </div>



</body></html>"
`;

exports[`coren-middleware test res function setHead & setPreloadedState 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">window.__PRELOADED_STATE__ = {\\"auth\\":false,\\"user\\":\\"john\\"}</script>
  <meta name=\\"description\\" content=\\"home description\\">
<script>hihihihi</script></head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">index file!</button>
  </div>



</body></html>"
`;

exports[`coren-middleware test res function setHead 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">
    window.__PRELOADED_STATE__ = {\\"auth\\":false}
  </script>
  <meta name=\\"description\\" content=\\"home description\\">
<script>hihihihi</script></head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">index file!</button>
  </div>



</body></html>"
`;

exports[`coren-middleware test res function setPreloadedState 1`] = `
"<!DOCTYPE html><html><head>
  <meta charset=\\"utf-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  <title>home</title>
  <script data-coren=\\"\\">window.__PRELOADED_STATE__ = {\\"auth\\":false,\\"user\\":\\"john\\"}</script>
  <meta name=\\"description\\" content=\\"home description\\">
</head>

<body>
  <div id=\\"root\\">
    <button class=\\"hi\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-952690291\\">index file!</button>
  </div>



</body></html>"
`;
